# AcademicAnonymousGrader

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  SBOM.spdx.json  app.py  docker-compose.dev.yml  docker-compose.production.yml  pyproject.toml  release-manifest.json  requirements.txt
.github/: copilot-instructions.md
analytics/: __init__.py  overview.py
config/: __init__.py  settings.py
database/: engine.py  init_db.py  session.py
docker/: entrypoint.sh
docs/: ACCEPTANCE_CRITERIA.md  ANALYTICS_GUIDE.md  BACKUP_AND_RESTORE.md  DATA_MODEL.md  DEPLOYMENT.md  FINAL_PRIVACY_REVIEW.md  INCIDENT_RESPONSE_PLAN.md  INSTALLATION_LINUX.md  KEY_CUSTODY_POLICY.md  KNOWN_LIMITATIONS.md  MAINTENANCE_PLAN.md  PHASE_ROADMAP.md  PRIVACY_AND_SECURITY.md  PRODUCTION_CHECKLIST.md  SUPPORT_MODEL.md  UI_REQUIREMENTS.md  UPGRADE_GUIDE.md  VALIDATION_RULES.md  WORKFLOW.md
models/: __init__.py  academic_stage.py  academic_term.py  academic_year.py  anonymous_student.py  assessment.py  audit_event.py  export_record.py  grade_record.py  import_batch.py  material.py  question.py  response.py  student_identity.py  submission.py
pages/: 1_Materials.py  2_Assessments.py  3_Import.py  4_Grading.py  5_Review.py  6_Export.py  7_Settings.py  9_Audit.py
parsers/: __init__.py  base.py  column_aliases.py  exceptions.py  html_parser.py  models.py
samples/: README.md
scripts/: create_diagnostic_bundle.py
security/: __init__.py  fingerprint.py  key_validation.py  models.py
services/: __init__.py  academic_structure_service.py  assessment_service.py  audit_service.py  auth_service.py  authorization_service.py  backup_service.py  config_validation.py  dashboard_service.py  excel_export_service.py  exceptions.py  finalization_service.py  grading_service.py  identity_matching_service.py  import_preview_service.py  logging_service.py  material_service.py  review_service.py  secure_import_service.py
tests/: conftest.py  test_assessment_reconciliation.py  test_assessment_service.py  test_audit_privacy.py  test_audit_service.py  test_auth_service.py  test_authorization_service.py  test_backup_restore.py  test_backup_service.py  test_column_mapping.py  test_column_normalization.py  test_csv_parser.py  test_dashboard_service.py  test_database_initialization.py  test_excel_export_security.py  test_excel_export_service.py  test_export_identity_service.py  (+59 more)
(+164 files in other folders)
